Add deployment and changed service

--- a/service.yaml
+++ b/service.yaml
@@ -1,30 +1,16 @@
-apiVersion: apps/v1
-kind: Deployment
+apiVersion: v1
+kind: Service
 metadata:
-  name: mrp-oidc-deploy
+  name: mrp-oidc-service
   labels:
-    name: mrp-oidc-deploy
+    name: mrp-oidc-service
     app: mrp-oidc
 spec:
-  replicas: 1
+  type: NodePort
   selector:
-    matchLabels:
-      name: mrp-oidc-pod
-      app: mrp-oidc
-  template:
-    metadata:
-      name: mrp-oidc-pod
-      labels:
-        name: mrp-oidc-pod
-        app: mrp-oidc
-    spec:
-      containers:
-      - name: mrp-health-oidc-1
-        image: mrp-health-oidc
-        imagePullPolicy: Never
-        # resources:
-        #   limits:
-        #     memory: "128Mi"
-        #     cpu: "500m"
-        ports:
-        - containerPort: 80
+    name: mrp-oidc-pod
+    app: mrp-oidc
+  ports:
+  - port: 80
+    targetPort: 80
+    nodePort: 30002
